; ModuleID = '/home/carl/AnghaBench/systemd/src/journal/extr_journald-kmsg.c_is_us.c'
source_filename = "/home/carl/AnghaBench/systemd/src/journal/extr_journald-kmsg.c_is_us.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@program_invocation_short_name = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*)* @is_us to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @is_us(i8* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = icmp ne i8* %7, null
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i8*, i8** %5, align 8
  %11 = icmp ne i8* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %9, %2
  store i32 0, i32* %3, align 4
  br label %30

13:                                               ; preds = %9
  %14 = load i8*, i8** %5, align 8
  %15 = call i64 @parse_pid(i8* %14, i64* %6)
  %16 = icmp slt i64 %15, 0
  br i1 %16, label %17, label %18

17:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %30

18:                                               ; preds = %13
  %19 = load i64, i64* %6, align 8
  %20 = call i64 (...) @getpid_cached()
  %21 = icmp eq i64 %19, %20
  br i1 %21, label %22, label %27

22:                                               ; preds = %18
  %23 = load i8*, i8** %4, align 8
  %24 = load i32, i32* @program_invocation_short_name, align 4
  %25 = call i64 @streq(i8* %23, i32 %24)
  %26 = icmp ne i64 %25, 0
  br label %27

27:                                               ; preds = %22, %18
  %28 = phi i1 [ false, %18 ], [ %26, %22 ]
  %29 = zext i1 %28 to i32
  store i32 %29, i32* %3, align 4
  br label %30

30:                                               ; preds = %27, %17, %12
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i64 @parse_pid(i8*, i64*) #1

declare dso_local i64 @getpid_cached(...) #1

declare dso_local i64 @streq(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
